# indexer-service-rs

./: .gitignore  Cargo.toml
service/src/: main.rs
tap/: Cargo.toml
tap/src/: collateral_adapter.rs  lib.rs  rav_storage_adapter.rs  receipt_checks_adapter.rs  receipt_storage_adapter.rs  test_utils.rs
